compiler-tests/src/test/data/diagnostic/dependencygraph/InternalBindings.kt
// RUN_PIPELINE_TILL: FIR2IR
// RENDER_IR_DIAGNOSTICS_FULL_TEXT

// https://github.com/ZacSweers/metro/pull/1554

// MODULE: scopes
abstract class LoggedInScope private constructor()

// MODULE: feature
interface SomeRepository

// MODULE: feature-impl(feature, scopes)
@ContributesBinding(LoggedInScope::class)
@Inject
internal class SomeRepositoryImpl : SomeRepository

// MODULE: graphs(scopes, feature)
@GraphExtension(LoggedInScope::class)
interface LoggedInGraph {
  val someRepository: SomeRepository

  @ContributesTo(AppScope::class)
  @GraphExtension.Factory
  interface Factory {
    fun create(): LoggedInGraph
  }
}

// MODULE: main(graphs, feature, feature-impl, scopes)
@DependencyGraph(AppScope::class)
interface <!MISSING_BINDING!>AppGraph<!> {
  val loggedInGraphFactory: LoggedInGraph.Factory
}
